# getting-start-wandb

./: .gitignore  Makefile  README.md  finetune.py.ipynb  poetry.toml  pyproject.toml  test.py
