[tool.poetry]
name = "x-wandb"
version = "0.1.0"
description = ""
authors = ["youichiro <cinnamon416@gmail.com>"]
readme = "README.md"
packages = [{include = "x_wandb"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
